--- a/index.html
+++ b/index.html
@@ -11,14 +11,15 @@
    <script src="index.js"></script>
 </head>
 <body>
-
+  <a href="http://192.168.0.17/test">Test</a>
+<!--
 <div id="wrap">
-	<img src="res/logo@2x.png" id="logo">
+  <img src="res/logo@2x.png" id="logo">
 
   <div id="topMenu">
-	<img src="res/newButton@2x.png" id="new" class="button" data-href="new">
-	<img src="res/settingsButton@2x.png" id="settings" class="button" data-href="settings">
-	<img src="res/aboutButton@2x.png" id="about" class="button" data-href="about">
+  <img src="res/newButton@2x.png" id="new" class="button" data-href="new">
+  <img src="res/settingsButton@2x.png" id="settings" class="button" data-href="settings">
+  <img src="res/aboutButton@2x.png" id="about" class="button" data-href="about">
   </div>
 
   <div id="botMenu">
@@ -28,6 +29,6 @@
   </div>
 
 </div>
-
+-->
 </body>
 </html>
