--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
 </head>
 <body>
   <a href="http://192.168.0.17/test">Test</a>
+  <a href="http://192.168.0.17/test3">Test 2</a>
 <!--
 <div id="wrap">
   <img src="res/logo@2x.png" id="logo">
